@@ -20,7 +20,7 @@ app.main.class=org.gjt.sp.jedit.jEdit
 # Each component must have a name, a size, and a 'fileset'. The fileset is the
 # name of a resource, relative to the root of the JAR, where the list of files
 # is stored, newline delimited
-comp.count=5
+comp.count=6
 
 comp.0.name=jEdit text editor
 comp.0.disk-size=2480
@@ -43,8 +43,14 @@ comp.3.real-size=264
 comp.3.fileset=jedit-windows
 comp.3.os=Windows
 
-comp.4.name=OS/2 start script (OS/2 only)
+comp.4.name=Improved MacOS integration (MacOS only)
 comp.4.disk-size=8
 comp.4.real-size=2
-comp.4.fileset=jedit-os2
-comp.4.os=HalfAnOS
+comp.4.fileset=jedit-mac
+comp.4.os=MacOS
+
+comp.5.name=OS/2 start script (OS/2 only)
+comp.5.disk-size=8
+comp.5.real-size=2
+comp.5.fileset=jedit-os2
+comp.5.os=HalfAnOS
